fixe transition mobile 4

--- a/styles/components/global/layer.scss
+++ b/styles/components/global/layer.scss
@@ -1,13 +1,16 @@
 .layers__items {
   width: 100vw;
   height: 100vh;
-  position: fixed;
+  position: fixed; 
   top: 0;
   left: 0;
   transform: translateY(100%);
   //transition: transform 1s cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 0s;
   z-index: 11;
+  @media (max-width: 992px) {
+    display: none;
+  }
   &.in {
     transform: translateY(0%);
     transition: transform 1s cubic-bezier(0.4, 0, 0.2, 1);
